Add server actions for managing countries, seasons, episodes, and questions
- Implemented CRUD operations for countries including fetching, creating, updating, and deleting.
- Added functionality to manage seasons with episode counts and difficulty levels for questions.
- Created server actions for episodes and questions, allowing retrieval and updates with associated data.
- Ensured revalidation of paths for admin interfaces after data modifications.

--- a/.env.template
+++ b/.env.template
@@ -21,3 +21,10 @@ DIRECT_URL="postgresql://postgres.xxxxxxxxxxxx:[YOUR-PASSWORD]@aws-0-region.pool
 # If your network supports IPv6 or you purchased IPv4 addon, use dedicated pooler (optional)
 # DATABASE_URL="postgres://postgres:[YOUR-PASSWORD]@db.xxxxxxxxxxxx.supabase.co:6543/postgres?pgbouncer=true"
 # DIRECT_URL="postgres://postgres:[YOUR-PASSWORD]@db.xxxxxxxxxxxx.supabase.co:5432/postgres"
+
+# Supabase Storage S3 Configuration
+# Get these from your Supabase project settings > Storage > S3 Connection
+SUPABASE_S3_ENDPOINT=https://xxxxxxxxxxxx.storage.supabase.co/storage/v1/s3
+SUPABASE_S3_REGION=eu-west-1
+SUPABASE_S3_ACCESS_KEY_ID=your-access-key-id
+SUPABASE_S3_SECRET_ACCESS_KEY=your-secret-access-key
