--- a/.env.template
+++ b/.env.template
@@ -28,3 +28,7 @@ SUPABASE_S3_ENDPOINT=https://xxxxxxxxxxxx.storage.supabase.co/storage/v1/s3
 SUPABASE_S3_REGION=eu-west-1
 SUPABASE_S3_ACCESS_KEY_ID=your-access-key-id
 SUPABASE_S3_SECRET_ACCESS_KEY=your-secret-access-key
+
+# Google Gemini API (for AI answer validation in quiz)
+# Get your free key from https://aistudio.google.com/apikey
+GEMINI_API_KEY=your-gemini-api-key
